# randomized-splay-trees

./: CMakeLists.txt  README.md  main.cpp  out.txt  out2.txt  output.txt  scientific.h
tests/: alternatingDepthN.cpp  compression.cpp  justone.cpp  lineTest.cpp  random.cpp  randomLineTest.cpp  splayline.cpp  stackTest.cpp  tester.cpp  tests.h  uniformTest.cpp  zipf.cpp  zipfTest.cpp
trees/: 2RotScheme3.cpp  even.cpp  evenScheme.cpp  halfsplay.cpp  kRotDeterministic.cpp  kRotScheme.cpp  kRotScheme1.cpp  kRotScheme2.cpp  kRotScheme3.cpp  kRotscheme.cpp  probabilisticKRot.cpp  regularBST.cpp  scheme1.cpp  scheme2.cpp  scheme3.cpp  splay.cpp  template.cpp  threeRotScheme.cpp  trees.h  vanilla.cpp
